fixed layout problem with buttons when deploying

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,6 +37,7 @@ img {
     width: 272px;
     margin-top: 5px;
     margin-bottom: 5px;
+    padding: 0 1rem;
 }
 
 .add-cancel-button {
@@ -301,7 +302,6 @@ img.responsive-img {
     color: white;
     transition: 0.5s;
     width: 140px;
-    padding: 0 1rem;
 }
 
 .filter-button:hover {
@@ -357,13 +357,12 @@ img.responsive-img {
     background-color: #FFA400;
     max-width: 90%;
     margin-left: 5%;
-    padding: 0 1rem;
 }
 
 /* "view whole exercise" doesn't fit on 
 very small screen. This way, the user
 can see the whole text(without icon) */
-@media screen and (max-width: 329px) {
+@media screen and (max-width: 330px) {
     .btn-view {
         height: 5em;
     }
